hphp/hack/test/typecheck/require_once_parse_fail3.php
<?hh

$x = require_once __DIR__.'/vendor/autoload.php';
